--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="intro_message">Camera2 API</string>
+    <string name="picture">Picture</string>
+    <string name="description_info">Info</string>
 </resources>
