--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="discard">Discard</string>
     <string name="record">Record</string>
     <string name="stop">Stop</string>
+    <string name="andrewID">Asanthan</string>
 </resources>
